riscv-pac/tests/ui/fail_no_unsafe.stderr
error: expected `unsafe`
 --> tests/ui/fail_no_unsafe.rs:1:23
  |
1 | #[riscv_pac::pac_enum(InterruptNumber)]
  |                       ^^^^^^^^^^^^^^^
